--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -7,25 +7,61 @@
     
     <body>
         <div class="body-main" ng-controller="HomeController">
-    
-            <img src="http://confidentdentalcare.in/images/banner_images/banner4.jpg" id="fullscreen">
             
             <img class="confident-logo" itemprop="logo" src="http://confidentdentalcare.in/images/confident_logo.png" alt="Confident Dental Care" title="Confident Dental Care">
             <br>
             <md-button class="md-raised md-primary book-now" ng-click="go('/booknow')">Book Now</md-button>
-            
-            <ul>
-                <li class="list"><a class="fa fa-2x fa-google-plus" href="https://plus.google.com/+ConfidentdentalcareInBestDentalClinic/posts"><span class="description-main">GitHub</span></a></li>
-                <li class="list"><a class="fa fa-2x fa-facebook" href="http://www.facebook.com/ConfidentDentalCareIndia"><span class="description-main">Facebook</span></a></li> 
-                <li class="list"><a class="fa fa-2x fa-twitter" href="https://twitter.com/Confident_care"><span class="description-main">Twitter</span></a></li>          
-                <li class="list"><a class="fa fa-2x fa-youtube" href="http://www.youtube.com/user/Confidentalhospital"><span class="description-main">Youtube</span></a></li>
-                <li class="list"><a class="fa fa-2x fa-tags" href="http://confidentdental.blogspot.com/"><span class="description-main">Blog</span></a></li>           
-                <li class="list"><a class="fa fa-2x fa-envelope" href="mailto:pro@confidentdentalcare.in?cc=saphal@confidentdentalcare.in,administrator@confidentdentalcare.in"></span></a></li>
-                <li class="list"><a class="fa fa-2x fa-pinterest" href="http://www.pinterest.com/confidentdental/dental-care/"><span class="description-main">Pinterest</span></a></li>     
-            </ul>
+         
         </div> 
-        
-    </footer>   
     </body>
+    
+    <footer class="footer-distributed">
+
+			<div class="footer-left">
+
+				<h3>Confident<span> Dental Care</span></h3>
+                <p class="footer-company-name">Comprehensive Oral Health</p>
+                <div class="hidden-xs">
+                    <br><br>
+                    <p class="footer-company-about">
+                        An initiative of India's top manufacturer of dentistry products, our super specialty centers provides a host of services and solutions for comprehensive oral health.
+                    </p>
+                </div>
+                
+			</div>
+
+			<div class="footer-center hidden-xs">
+                <div>
+					<i class="fa fa-phone"></i>
+					<p>+91 80 23011500</p>
+				</div>
+
+				<div>
+					<i class="fa fa-envelope"></i>
+					<p><a href="mailto:pro@confidentdentalcare.in?cc=saphal@confidentdentalcare.in,administrator@confidentdentalcare.in">support@confidentdentalcare.in</a></p>
+				</div>
+                
+                <div>
+					<i class="fa fa-map-marker"></i>
+					<p><span>117 West of Chord Road</span> Mahalakshmi Puram, Bangalore</p>
+				</div>
+			</div>
+
+			<div class="footer-right hidden-xs">
+                
+				<div class="footer-icons">
+
+                    <a class="fa fa-2x fa-google-plus" href="https://plus.google.com/+ConfidentdentalcareInBestDentalClinic/posts"></a>
+                    <a class="fa fa-2x fa-facebook" href="http://www.facebook.com/ConfidentDentalCareIndia"></a>
+                    <a class="fa fa-2x fa-twitter" href="https://twitter.com/Confident_care"></a>
+                    <a class="fa fa-2x fa-youtube" href="http://www.youtube.com/user/Confidentalhospital"></a>
+                    <a class="fa fa-2x fa-tags" href="http://confidentdental.blogspot.com/"></a>
+                    <a class="fa fa-2x fa-pinterest" href="http://www.pinterest.com/confidentdental/dental-care/"></a>
+
+				</div>
+
+			</div>
+
+		</footer>
     
 </html>
