--- a/modules/events/client/views/calendar-events.client.view.html
+++ b/modules/events/client/views/calendar-events.client.view.html
@@ -1,6 +1,6 @@
 
 
-<section ng-controller="EventsController as eventCtrl">
+<section class="container" ng-controller="EventsController as eventCtrl">
 
     <div class= "row">
         <div class="col-sm-6 pad-bottom" ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
