--- a/modules/events/client/views/events.client.view.html
+++ b/modules/events/client/views/events.client.view.html
@@ -1,5 +1,5 @@
 
-<section data-ng-controller="EventsController as eventCtrl">
+<section class="container" data-ng-controller="EventsController as eventCtrl">
 
     <div class= "row">
         <div class="col-xs-8 col-sm-6 col-md-4"><h2>Upcoming Events</h2></div>
