--- a/modules/events/client/views/list-events.client.view.html
+++ b/modules/events/client/views/list-events.client.view.html
@@ -1,6 +1,6 @@
 
 
-<section data-ng-controller="EventsController as eventCtrl">
+<section class="container" data-ng-controller="EventsController as eventCtrl">
     <table class="table table-striped table-bordered table-responsive">
         <thead>
             <tr>
