--- a/modules/personals/client/views/list-appttypes.client.view.html
+++ b/modules/personals/client/views/list-appttypes.client.view.html
@@ -1,3 +1,4 @@
+<section class="container">
 <h2>Appointment Types</h2>
 <div ng-controller="ApptTypeController">
     <table class="table table-responsive">
@@ -32,3 +33,4 @@
     
     </table>
 </div>
+</section>
