--- a/modules/personals/client/views/list-personals.client.view.html
+++ b/modules/personals/client/views/list-personals.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="PersonalsController as personalsCtrl">
+<section class="container" data-ng-controller="PersonalsController as personalsCtrl">
   
   <div class="row">
       
