--- a/modules/core/client/css/footer.css
+++ b/modules/core/client/css/footer.css
@@ -5,7 +5,7 @@
 	width: 100%;
 	text-align: left;
 	font: bold 16px sans-serif;
-    position:absolute;
+    position:fixed;
     bottom:0;
     width:100%;
 	padding: 15px 50px;
@@ -29,7 +29,7 @@
 
 .footer-distributed h3{
 	color:  #ffffff;
-	font: normal 36px 'Cookie', cursive;
+	font: normal 26px 'Cookie', cursive;
 	margin: 0;
 }
 
