--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -20,9 +20,8 @@
 			<div class="footer-left">
 
 				<h3>Confident<span> Dental Care</span></h3>
-                <p class="footer-company-name">Comprehensive Oral Health</p>
                 <div class="hidden-xs">
-                    <br><br>
+                    <br>
                     <p class="footer-company-about">
                         An initiative of India's top manufacturer of dentistry products, our super specialty centers provides a host of services and solutions for comprehensive oral health.
                     </p>
@@ -30,7 +29,7 @@
                 
 			</div>
 
-			<div class="footer-center hidden-xs">
+			<div class="footer-center hidden-xs hidden-sm">
                 <div>
 					<i class="fa fa-phone"></i>
 					<p>+91 80 23011500</p>
@@ -39,11 +38,6 @@
 				<div>
 					<i class="fa fa-envelope"></i>
 					<p><a href="mailto:pro@confidentdentalcare.in?cc=saphal@confidentdentalcare.in,administrator@confidentdentalcare.in">support@confidentdentalcare.in</a></p>
-				</div>
-                
-                <div>
-					<i class="fa fa-map-marker"></i>
-					<p><span>117 West of Chord Road</span> Mahalakshmi Puram, Bangalore</p>
 				</div>
 			</div>
 
