--- a/modules/core/client/css/footer.css
+++ b/modules/core/client/css/footer.css
@@ -5,7 +5,7 @@
 	width: 100%;
 	text-align: left;
 	font: bold 16px sans-serif;
-    position:fixed;
+    position: absolute;
     bottom:0;
     width:100%;
 	padding: 15px 50px;
