--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
   <base href="/">
   <title>{{title}}</title>
   <meta name="description" content="{{description}}">
@@ -36,10 +36,12 @@
 </head>
 
 <body class="ng-cloak">
-  <header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
-  <section class="content">
-      {% block content %}{% endblock %}
-  </section>
+    <div flex layout="column" layout-fill>
+        <md-toolbar>
+            <header data-ng-include="'/modules/core/views/header.client.view.html'"></header>
+        </md-toolbar>
+        {% block content %}{% endblock %}
+    </div>
 
   <!--Embedding The User Object-->
   <script type="text/javascript">
