--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -17,27 +17,19 @@
         
     <footer class="footer-distributed">
         <div class="footer-left">
-
-            <h3>Confident<span> Dental Care</span></h3>
             <div class="hidden-xs">
-                <br>
                 <p class="footer-company-about">
-                    An initiative of India's top manufacturer of dentistry products, our super specialty centers provides a host of services and solutions for comprehensive oral health.
+                    Copyright © 2016 RTWO Technologies Pvt. Ltd. All Rights Reserved.
                 </p>
             </div>
-            
         </div>
 
         <div class="footer-center hidden-xs hidden-sm">
-            <div>
-                <i class="fa fa-phone"></i>
-                <p>+91 80 23011500</p>
-            </div>
-
-            <div>
-                <i class="fa fa-envelope"></i>
-                <p><a href="mailto:pro@confidentdentalcare.in?cc=saphal@confidentdentalcare.in,administrator@confidentdentalcare.in">support@confidentdentalcare.in</a></p>
-            </div>
+            <p>
+            <a href="">About Us</a> |
+            <a href="">Terms and Conditions</a> |
+            <a href="">Contact Us</a>
+            </p>
         </div>
 
         <div class="footer-right hidden-xs">
@@ -50,7 +42,7 @@
                 <a class="fa fa-2x fa-youtube" href="http://www.youtube.com/user/Confidentalhospital"></a>
                 <a class="fa fa-2x fa-tags" href="http://confidentdental.blogspot.com/"></a>
                 <a class="fa fa-2x fa-pinterest" href="http://www.pinterest.com/confidentdental/dental-care/"></a>
-
+                <a class="fa fa-2x fa-envelope" href="mailto:pro@confidentdentalcare.in?cc=saphal@confidentdentalcare.in,administrator@confidentdentalcare.in"></a>      
             </div>
 
         </div>
