--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -37,7 +37,7 @@
 
 <body class="ng-cloak">
     <div flex layout="column" layout-fill>
-        <md-toolbar>
+        <md-toolbar style="background-color: transparent;">
             <header data-ng-include="'/modules/core/views/header.client.view.html'"></header>
         </md-toolbar>
         {% block content %}{% endblock %}
