--- a/modules/core/client/css/footer.css
+++ b/modules/core/client/css/footer.css
@@ -1,11 +1,11 @@
 .footer-distributed{
-	background-color: #292c2f;
+	background-color: silver;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
 	font: bold 16px sans-serif;
-    position: absolute;
+    position:fixed;
     bottom:0;
     width:100%;
 	padding: 15px 50px;
@@ -106,10 +106,6 @@
 
 /* Footer Right */
 
-.footer-distributed .footer-right{
-	width: 20%;
-}
-
 .footer-distributed .footer-company-about{
 	line-height: 20px;
 	color:  #92999f;
@@ -127,25 +123,19 @@
 }
 
 .footer-distributed .footer-icons{
-	margin-top: 15px;
     margin-left: 15px;
 }
 
 .footer-distributed .footer-icons a{
 	display: inline-block;
 	width: 35px;
-	height: 35px;
 	cursor: pointer;
-	background-color:  #33383b;
 	border-radius: 2px;
 
 	font-size: 20px;
 	color: #ffffff;
 	text-align: center;
-	line-height: 35px;
 
-	margin-right: 3px;
-	margin-bottom: 5px;
 }
 
 /* If you don't want the footer to be responsive, remove these media queries */
