--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -26,7 +26,7 @@
     <ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">
       <li class="divider-vertical"></li>
       <li data-ui-sref-active="active">
-        <a class="navbar-items" data-ui-sref="authentication.signin">Sign In</a>
+        <a class="navbar-items" data-ui-sref="authentication.signin"><i class="glyphicon glyphicon-log-in"></i> Sign In</a>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
