--- a/modules/core/client/css/footer.css
+++ b/modules/core/client/css/footer.css
@@ -57,6 +57,7 @@
 	font-size: 14px;
 	font-weight: normal;
 	margin: 0;
+    padding-bottom: 10px;
 }
 
 /* Footer Center */
@@ -65,62 +66,15 @@
 	width: 35%;
 }
 
-.footer-distributed .footer-center i{
-	background-color:  #33383b;
-	color: #ffffff;
-	font-size: 20px;
-	width: 38px;
-	height: 38px;
-	border-radius: 50%;
-	text-align: center;
-	line-height: 42px;
-	margin: 10px 15px;
-	vertical-align: middle;
-}
-
-.footer-distributed .footer-center i.fa-envelope{
-	font-size: 15px;
-	line-height: 38px;
-}
-
-.footer-distributed .footer-center p{
-	display: inline-block;
-	color: #ffffff;
-	vertical-align: middle;
-	margin:0;
-    font-size: 15px;
-}
-
-.footer-distributed .footer-center p span{
-	display:block;
-	font-weight: normal;
-	font-size:12px;
-	line-height:2;
-}
 
 .footer-distributed .footer-center p a{
-	color:  #5383d3;
+    font-size: 14px;
+	color: gray;
 	text-decoration: none;;
 }
 
 
 /* Footer Right */
-
-.footer-distributed .footer-company-about{
-	line-height: 20px;
-	color:  #92999f;
-	font-size: 13px;
-	font-weight: normal;
-	margin: 0;
-}
-
-.footer-distributed .footer-company-about span{
-	display: block;
-	color:  #ffffff;
-	font-size: 14px;
-	font-weight: bold;
-	margin-bottom: 20px;
-}
 
 .footer-distributed .footer-icons{
     margin-left: 15px;
@@ -131,11 +85,9 @@
 	width: 35px;
 	cursor: pointer;
 	border-radius: 2px;
-
 	font-size: 20px;
 	color: #ffffff;
 	text-align: center;
-
 }
 
 /* If you don't want the footer to be responsive, remove these media queries */
@@ -151,7 +103,7 @@
 	.footer-distributed .footer-right{
 		display: block;
 		width: 100%;
-		margin-bottom: 40px;
+		margin-bottom: 20px;
 		text-align: center;
 	}
 
