--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -18,13 +18,13 @@
     <footer class="footer-distributed">
         <div class="footer-left">
             <div class="hidden-xs">
-                <p class="footer-company-about">
+                <p class="footer-company-name">
                     Copyright © 2016 RTWO Technologies Pvt. Ltd. All Rights Reserved.
                 </p>
             </div>
         </div>
 
-        <div class="footer-center hidden-xs hidden-sm">
+        <div class="footer-center">
             <p>
             <a href="">About Us</a> |
             <a href="">Terms and Conditions</a> |
@@ -32,7 +32,7 @@
             </p>
         </div>
 
-        <div class="footer-right hidden-xs">
+        <div class="footer-right">
             
             <div class="footer-icons">
 
