--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -10,7 +10,7 @@
             
             <img class="confident-logo" itemprop="logo" src="http://confidentdentalcare.in/images/confident_logo.png" alt="Confident Dental Care" title="Confident Dental Care">
             <br>
-            <md-button class="md-raised md-primary book-now" ng-click="go('/booknow')">Book Now</md-button>
+            <md-button class="md-raised md-primary book-now" ng-click="go('/booknow')"> BOOK APPOINTMENT <i class="glyphicon glyphicon-arrow-right push-right"></i></md-button>
          
         </div> 
     </body>
