--- a/modules/events/client/views/list-events.client.view.html
+++ b/modules/events/client/views/list-events.client.view.html
@@ -1,7 +1,7 @@
 
 
 <section data-ng-controller="EventsController as eventCtrl">
-    <table class="table table-striped table-bordered table-responsive">
+    <table class="table table-hover table-responsive">
         <thead>
             <tr>
             <th>Dentist Name</th>
