--- a/modules/events/client/views/calendar-events.client.view.html
+++ b/modules/events/client/views/calendar-events.client.view.html
@@ -5,16 +5,15 @@
     <div class= "row">
         <div class="row pad-bottom" ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
 
-        <div class="">
-            <div class="well" ng-show="currentEvent">
+        <md-sidenav md-component-id="right" md-is-open="isSidenavOpen" class="md-sidenav-right">
+            <div class="well side-well" ng-show="currentEvent">
                 <strong>Dentist Name:</strong><pre> {{currentEvent.title}}<br/></pre>
                 <strong>When:</strong> <br/>
                 <pre>{{currentEvent.start | amDateFormat: 'dddd, MMMM Do YYYY, h:mm:ss a'}} to {{currentEvent.end | amDateFormat: 'h:mm:ss a'}}</pre>
                 <strong>Patient Details:</strong> 
                 <pre>{{currentEvent.description.split('\n')[0]}}<br/>{{currentEvent.description.split('\n')[1]}}<br/>{{currentEvent.description.split('\n')[2]}}<br/></pre>
             </div>
-        </div>
-
+        </md-sidenav>
     </div>
 
 
