--- a/modules/events/client/views/events.client.view.html
+++ b/modules/events/client/views/events.client.view.html
@@ -5,8 +5,8 @@
                    
         <div class="panel-heading">
             <h2> Upcoming Events
-                <button type="button" class="btn btn-primary" style="float:right" ng-click="eventCtrl.toggleview()">
-                    <i class="glyphicon glyphicon-list"></i> View</button>
+                <md-button class="md-fab md-primary cal-icon" ng-click="eventCtrl.toggleview()">
+                    <i class="glyphicon glyphicon-calendar"></i></md-button>
             </h2>
             
         </div>
