--- a/modules/events/client/css/events.css
+++ b/modules/events/client/css/events.css
@@ -85,3 +85,13 @@
   margin-left: 12px !important;
   padding: 5px! important;
 }
+    
+.fc-day:hover {
+    background: silver;
+    box-shadow:
+            1px 1px #53a7ea,
+            2px 2px #53a7ea,
+            3px 3px #53a7ea;
+    -webkit-transform: translateX(-3px);
+    transform: translateX(-3px);
+}
