--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -89,7 +89,7 @@ a:hover .header-profile-image {
 }
 
 .confident-logo {
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 10px;
 }
 
@@ -110,4 +110,33 @@ a:hover .header-profile-image {
 .page-title {
     text-align: center;
     font: normal 26px 'Cookie';
+}
+
+ .autocomplete-custom-template li {
+  border-bottom: 1px solid #ccc;
+  height: auto;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  white-space: normal; }
+ .autocomplete-custom-template li:last-child {
+  border-bottom-width: 0; }
+ .autocomplete-custom-template .item-title,
+ .autocomplete-custom-template .item-metadata {
+  display: block;
+  line-height: 2; 
+  }
+ .autocomplete-custom-template .item-title i {
+    height: 18px;
+    width: 18px; 
+  }
+.autocomplete-custom-template .user-title{
+    color: blueviolet;
+    font-size: 20px;
+    padding-left: 50px;
+}
+ 
+.autocompletedemoCustomTemplate {
+    color: black;
+    padding-left: 20%;
+    padding-right: 20%;
 }
