--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -9,52 +9,85 @@
         <div class="body-main" ng-controller="HomeController">
             
             <img class="confident-logo" itemprop="logo" src="http://confidentdentalcare.in/images/confident_logo.png" alt="Confident Dental Care" title="Confident Dental Care">
-            <br>
-  
-            <div class="autocompletedemoCustomTemplate text-center" ng-controller="PersonalsController as personalsCtrl">   
-        
-            <md-content class="md-padding">
-                <md-tabs class="" md-selected="data.selectedIndex"  md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
-                    <md-tab id="tab1">
-                        <md-tab-label>Dentist</md-tab-label>
-                    </md-tab>
-                    <md-tab id="tab2">
-                        <md-tab-label>Treatment</md-tab-label>
-                    </md-tab>
-                </md-tabs>
-            </md-content>
             
-            <form name="autocompleteForm">
-            <md-autocomplete required md-input-name="autocomplete" 
-                    md-selected-item="personalsCtrl.selectedDentist"
-                    md-selected-item-change="createEventCtrl.updateDentist(item)" 
-                    md-search-text="searchText" 
-                    md-items="item in personalsCtrl.personals | filter:search | orderBy:'fName'" 
-                    md-item-text="item.fName  + ' ' + item.lName"
-                    placeholder="Search dentist"
-                    md-menu-class="autocomplete-custom-template">
-                <md-item-template>
-                    <span class="item-title">
-                        <span><i class="glyphicon glyphicon-user user-cust-list"></i></span>
-                        <span class="user-title">{{item.fName + ' ' + item.lName}}</span>
-                    </span>
-                    <span class="text-muted sub-title">
-                        {{ item.speciality }}
-                    </span>
-                    
-                </md-item-template>
-                <div ng-messages="autocompleteForm.autocomplete.$error">
-                    <div ng-message="required">This field is required</div>
-                </div>
-            </md-autocomplete>
-            </form>
+            <br>
+            <!--
+            <div layout-gt-sm="row" class="text text-center" ng-controller="PersonalsController as personalsCtrl"> 
+            
+                <form name="autocompleteForm">
+                <md-autocomplete required md-input-name="autocomplete" 
+                        md-selected-item="$scope.selectedDentist"
+                        md-search-text="searchText" 
+                        md-items="item in personalsCtrl.personals | filter:search | orderBy:'fName'" 
+                        md-item-text="item.fName  + ' ' + item.lName"
+                        placeholder="Search dentist"
+                        md-menu-class="autocomplete-custom-template"
+                        md-selected-item-change="$scope.selectedItemChange(item)">
+                    <md-item-template>
+                        <span class="item-title">
+                            <span><i class="glyphicon glyphicon-user user-cust-list"></i></span>
+                            <span class="user-title">{{item.fName + ' ' + item.lName}}</span>
+                        </span>
+                        <span class="text-muted sub-title">
+                            {{ item.speciality }}
+                        </span>
+                        
+                    </md-item-template>
+                    <div ng-messages="autocompleteForm.autocomplete.$error">
+                        <div ng-message="required">This field is required</div>
+                    </div>
+                </md-autocomplete>
+                </form>
+            </div>
         
+        <md-button class="md-raised md-primary book-now" ng-click="go('/booknow')"> BOOK APPOINTMENT <i class="glyphicon glyphicon-arrow-right push-right"></i></md-button>
+        -->
+        </div> 
+        
+        <div ng-controller="HomeController as ctrl" layout="column" ng-cloak>
+            <md-content class="md-padding">
+                <form ng-submit="$event.preventDefault()" name="searchForm">
+                <div layout-gt-sm="row" class="panel panel-body panel-search">
+                    <div class="input-search" flex>
+                        <md-autocomplete 
+                        ng-disabled="ctrl.isDisabled"
+                        md-min-length="0"
+                        md-no-cache="ctrl.noCache"
+                        md-selected-item="ctrl.selectedPrsnl"
+                        md-selected-item-change="ctrl.selectedPrsnlChange(prsnl)"
+                        md-search-text="ctrl.searchPrsnl"
+                        md-items="prsnl in ctrl.queryPrsnlSearch(ctrl.searchPrsnl)"
+                        md-item-text="prsnl.fName  + ' ' + prsnl.lName"
+                        placeholder="Search dentist">
+                        <md-item-template>
+                            <span md-highlight-text="ctrl.searchPrsnl">{{prsnl.fName + ' ' + prsnl.lName}}</span>
+                        </md-item-template>
+                        </md-autocomplete>
+                    </div>
+                    <div class="input-search" flex>
+                        <md-autocomplete 
+                        md-min-length="0"
+                        ng-disabled="ctrl.isDisabled"
+                        md-no-cache="ctrl.noCache"
+                        md-selected-item="ctrl.selectedAppt"
+                        md-selected-item-change="ctrl.selectedApptChange(item)"
+                        md-search-text="ctrl.searchAppt"
+                        md-items="item in ctrl.queryApptSearch(ctrl.searchAppt)"
+                        md-item-text="item.description"
+                        placeholder="Search treatment">
+                        <md-item-template>
+                            <span md-highlight-text="ctrl.searchAppt">{{item.description}}</span>
+                        </md-item-template>
+                        </md-autocomplete>
+                    </div>
+                    <div class="input-search">
+                        <md-button class="md-icon-button md-raised md-primary" ng-click="go('/booknow')"><i class="glyphicon glyphicon-arrow-right"></i></md-button>
+                    </div>
+                </div>
+                </form>
+            </md-content>
         </div>
         
-            <md-button class="md-raised md-primary book-now" ng-click="go('/booknow')"> BOOK APPOINTMENT <i class="glyphicon glyphicon-arrow-right push-right"></i></md-button>
-         
-        </div> 
-
     </body>
     
         
