--- a/modules/events/client/views/events.client.view.html
+++ b/modules/events/client/views/events.client.view.html
@@ -5,7 +5,7 @@
                    
         <div class="panel-heading">
             <h2> Upcoming Events
-                <md-button class="md-fab md-primary cal-icon" ng-click="eventCtrl.toggleview()">
+                <md-button class="md-fab md-primary cal-icon" aria-label="view" ng-click="eventCtrl.toggleview()">
                     <i class="glyphicon glyphicon-calendar"></i></md-button>
             </h2>
             
