--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,38 +1,37 @@
-<div class="container" data-ng-controller="HeaderController">
+<div id="head1" data-ng-controller="HeaderController">
+    
   <div class="navbar-header">
     <button class="navbar-toggle" type="button" data-ng-click="toggleCollapsibleMenu()">
       <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
+      <span class="glyphicon glyphicon-menu-hamburger"></span>
     </button>
-    <a data-ui-sref="home" class="navbar-brand">Confidental Dental</a>
+    <a data-ui-sref="home" class="navbar-brand"><i class="glyphicon glyphicon-home"></i> Book Appointment</a>  
   </div>
+  
   <nav class="collapse navbar-collapse" uib-collapse="!isCollapsed" role="navigation">
+      
     <ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
       <li data-ng-repeat="item in menu.items | orderBy: 'position'" data-ng-if="item.shouldRender(authentication.user);" ng-switch="item.type" data-ng-class="{ active: $state.includes(item.state), dropdown: item.type === 'dropdown' }" class="{{item.class}}" uib-dropdown="item.type === 'dropdown'">
-        <a ng-switch-when="dropdown" class="dropdown-toggle" uib-dropdown-toggle role="button">{{::item.title}}&nbsp;<span class="caret"></span></a>
+        <a class="navbar-items" ng-switch-when="dropdown" class="dropdown-toggle" uib-dropdown-toggle role="button">{{::item.title}}&nbsp;<span class="caret"></span></a>
         <ul ng-switch-when="dropdown" class="dropdown-menu">
           <li data-ng-repeat="subitem in item.items | orderBy: 'position'" data-ng-if="subitem.shouldRender(authentication.user);" data-ui-sref-active="active">
             <a data-ui-sref="{{subitem.state}}" data-ng-bind="subitem.title"></a>
           </li>
         </ul>
-        <a ng-switch-default data-ui-sref="{{item.state}}" data-ng-bind="item.title"></a>
+        
+        <a class="navbar-items" ng-switch-default data-ui-sref="{{item.state}}" data-ng-bind="item.title"></a>
       </li>
     </ul>
+    
     <ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">
-      <li data-ui-sref-active="active">
-        <a data-ui-sref="authentication.signup">Sign Up</a>
-      </li>
       <li class="divider-vertical"></li>
       <li data-ui-sref-active="active">
-        <a data-ui-sref="authentication.signin">Sign In</a>
+        <a class="navbar-items" data-ui-sref="authentication.signin"><i class="glyphicon glyphicon-log-in"></i><b> Login </b></a>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
       <li class="dropdown" uib-dropdown>
-        <a class="dropdown-toggle user-header-dropdown-toggle" uib-dropdown-toggle role="button">
-          <img data-ng-src="{{authentication.user.profileImageURL}}" alt="{{authentication.user.displayName}}" class="header-profile-image" />
+        <a class="navbar-items" class="dropdown-toggle user-header-dropdown-toggle" uib-dropdown-toggle role="button">
           <span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
         </a>
         <ul class="dropdown-menu" role="menu">
