--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
   <base href="/">
   <title>{{title}}</title>
   <meta name="description" content="{{description}}">
   <meta name="fragment" content="!">
-
+  
+  <!-- Font Awesome Icon-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+ 
+  <!-- Font Family-->
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,500,600' rel='stylesheet' type='text/css'>
+         
   <!-- Apple META -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -36,12 +42,12 @@
 </head>
 
 <body class="ng-cloak">
-  <header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
-  <section class="content">
-    <section class="container">
-      {% block content %}{% endblock %}
-    </section>
-  </section>
+    <div flex layout="column" layout-fill>
+        <md-toolbar style="background-color: transparent;">
+            <header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top "></header>
+        </md-toolbar>
+        {% block content %}{% endblock %}
+    </div>
 
   <!--Embedding The User Object-->
   <script type="text/javascript">
@@ -60,4 +66,7 @@
   {% endif %}
 </body>
 
+
+  <footer data-ng-include="'/modules/core/views/footer.client.view.html'" class="navbar navbar-fixed-bottom "></footer>
+      
 </html>
