--- a/modules/personals/client/css/personals.css
+++ b/modules/personals/client/css/personals.css
@@ -5,7 +5,14 @@
 
 .prsnl-cust-list {
 	font-size: 100px;
+    height: 100px;
 }
+
+.prsnl-image {
+	font-size: 100px;
+    height: 100px;
+}
+
 
 .chkbox-cons-left {
 	width: 10%;
@@ -26,4 +33,102 @@
     height: 30px;
     width: 180px;
 }
+ h1,h4,h2{
+         color: #248dc9;
+     }
+    
 
+ td{
+         text-align:center;
+     }
+.dropdown-menu{
+         margin-left: 15px;
+     }
+     
+     @import "compass/css3";
+
+.star-rating {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  
+  .star {
+    padding: 1px;
+    color: #ddd;
+    font-size: 20px;
+    text-shadow: .05em .05em #aaa;
+    list-style-type: none;
+    display: inline-block;
+    cursor: pointer;
+
+    &.filled {
+      color: #fd0;
+    }
+  }
+
+  &.readonly .star.filled {
+    color: #666;
+  }
+}
+
+
+@media only screen and (max-width: 768px)  {
+     
+     
+     
+    .input-group .form-control{
+        position: relative;
+        z-index: 0;
+    }
+    .input-group-btn:last-child>.btn, .input-group-btn:last-child>.btn-group{
+            z-index: 0;
+             position: relative;
+    }
+    
+ }
+ 
+ 
+ @media only screen and (max-width: 1950px)  {
+      .input-group .form-control{
+        position: relative;
+        z-index: 0;
+    }
+    .input-group-btn:last-child>.btn, .input-group-btn:last-child>.btn-group{
+            z-index: 0;
+             position: relative;
+    }
+ }
+ 
+ 
+  @media only screen and (max-width: 926px)  {
+ 
+     .container{
+             margin-bottom: 108px;
+     }
+ }
+ 
+ @media only screen and (max-width: 896px)  {
+ 
+    .container{
+             margin-bottom: 150px;
+     }
+ }
+ 
+  @media only screen and (max-width: 935px)  {
+ 
+    .text-center{
+             margin-top: 75px;
+              }
+     .fa-user-md{
+          margin-top: 75px;
+     }          
+ }
+ /*@media only screen and (max-width: 878px)  {
+     .navbar-brand{
+         background-color:  #00A89C;
+         color: #fff;
+     }
+    
+ }*/
+ 
+ 
