--- a/modules/personals/client/views/create-personal.client.view.html
+++ b/modules/personals/client/views/create-personal.client.view.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html angular-multi-select-mouse-trap angular-multi-select-key-trap>
+    
+    <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+</head>
+
 <section data-ng-controller="PersonalsCreateController as createPrsnlCtrl">
   
   <div class="modal-header">
-    <h3>New Personal</h3>
+    <h1><a class="fa fa-2x fa-user-md" ></a><b> New Dentist </b></h1>
   </div>
   
   <div class="modal-body">
@@ -16,9 +21,10 @@
         </div>
         <div class="row">
           <div class="col-sm-6 text-center form-group">
-            <i class="glyphicon glyphicon-user prsnl-profile"
+           <!-- <i class="glyphicon glyphicon-user prsnl-profile"
                ng-class="{'text-primary': createPrsnlCtrl.isConsultant, 'text-danger': !createPrsnlCtrl.isConsultant}">
-            </i>
+            </i>-->
+              
           </div>
           
           <div class="col-sm-6">
@@ -37,19 +43,29 @@
               </div>
             </div>
             
-            <div class="form-group">
-                <label class="control-label" for="treatment">Treatment</label><br>
-                <angular-multi-select class="controls" ng-controller="ApptTypeController"             
-                    input-model="procedureList"
-                    output-model="createPrsnlCtrl.selectedTreatments"
-                    item-label="<[ description ]>"
-                    button-template="angular-multi-select-btn-data.htm"
-                    button-label="<[ description ]>"
-                    button-label-separator='[" , "]'
-                    tick-property="checked"
-                    id="treatment">
-                </angular-multi-select>
+            <div class="form-group" ng-controller="ApptTypeController">
+                            <label class="control-label" for="treatment">Treatment</label>
+                            <br>
+                            <multiple-autocomplete ng-model="createPrsnlCtrl.selectedTreatments"
+                                object-property="description"
+                                suggestions-arr="procedureList">
+                            </multiple-autocomplete>
+                        </div>
+            
+              <div class="form-group">
+              <label class="control-label" for="qualification">Qualification</label>
+              <div class="controls">
+                <input name="qualification" type="text" data-ng-model="createPrsnlCtrl.qualification" id="qualification" class="form-control" placeholder="Enter your qualification" required>
+              </div>
             </div>
+            
+              <div class="form-group">
+              <label class="control-label" for="experience">Experience</label>
+              <div class="controls">
+                <input name="experience" type="text" data-ng-model="createPrsnlCtrl.experience" id="experience" class="form-control" placeholder="Enter your experience" required>
+              </div>
+            </div>
+            
           </div>
         </div>
         
@@ -64,9 +80,14 @@
             <div class="form-group">
               <label class="control-label" for="emailId">Email Id</label>
               <div class="controls">
-                <input name="emailId" type="text" data-ng-model="createPrsnlCtrl.emailId" id="emailId" class="form-control" placeholder="Enter your email id" required>
+                <input name="emailId" type="email" data-ng-model="createPrsnlCtrl.emailId" id="emailId" class="form-control" placeholder="Enter your email id" required>
+                 <div ng-show="createPersonalForm.$submitted || createPersonalForm.emailId.$touched">
+                    <span ng-show="createPersonalForm.emailId.$error.required">Please fill the patient email id</span>
+                    <span ng-show="createPersonalForm.emailId.$error.email">This is not a valid email.</span>
+               </div>
               </div>
             </div>
+           
           </div>       
         
           <div class="col-sm-6 col-sm-pull-6">
@@ -75,15 +96,32 @@
               <div class="controls">
                 <input name="speciality" type="text" data-ng-model="createPrsnlCtrl.speciality" id="speciality" class="form-control" placeholder="Enter your speciality">
               </div>
-            </div>]
+            </div>
             <div class="form-group">
               <label class="control-label" for="isConsultant">Consultant</label>
               <div class="controls">
                 <input name="isConsultant" type="checkbox" data-ng-model="createPrsnlCtrl.isConsultant" id="isConsultant" class="form-control chkbox-cons-left">
               </div>
             </div>
+           <div class="form-group">
+              <label class="control-label" for="adminemailId">Admin Email Id</label>
+              <div class="controls">
+                <input name="adminemailId" type="text" data-ng-model="createPrsnlCtrl.adminemailId" id="adminemailId" class="form-control" placeholder="Enter Admin email id" required>
+              </div>
+            </div>
           </div>
         </div>
+        
+         <div class="row">
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label class="control-label" for="rating">Rating</label>
+                            <div class="controls">
+                                <input-stars max="5" ng-model="createPrsnlCtrl.rating"></input-stars>
+                            </div>
+                        </div>
+                    </div>
+          </div>
 
         </fieldset>
      </form>
