--- a/modules/personals/client/views/list-personals.client.view.html
+++ b/modules/personals/client/views/list-personals.client.view.html
@@ -1,16 +1,16 @@
-<section data-ng-controller="PersonalsController as personalsCtrl">
+<section class="container" data-ng-controller="PersonalsController as personalsCtrl">
   
   <div class="row">
       
     <div class="col-xs-6 col-sm-4">
-      <h1>Personal</h1>
+      <h1> <a class="fa fa-2x fa-user-md" ></a> <b>DENTISTS </b> </h1>
     </div>
       
       <div class="form-group col-xs-6 col-sm-8 col-md-8 text-right pull-down">
           <h2>
           <button type="button" class="btn btn-success text-center" ng-click="personalsCtrl.modelCreate('lg')">
               <i class="glyphicon glyphicon-user"></i> <br>
-                  New Personal
+                  New Dentist
           </button>                  
           </h2>
       </div>
@@ -22,7 +22,7 @@
       <div class="input-group input-group-lg">
         <input type="text" class="form-control" ng-model="searchText" placeholder="Search...">
         <span class="input-group-btn">
-          <button class="btn btn-default" type="button">Go!></button>       
+          <button class="btn btn-success" type="button"><span class="glyphicon glyphicon-search"></span></button>       
         </span>
       </div>
     </div>
