--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -1,4 +1,4 @@
-<div data-ng-controller="AuthenticationController">
+<div class="container" data-ng-controller="AuthenticationController">
   <h3 class="col-md-12 text-center">Or with your account</h3>
   <div class="col-xs-offset-1 col-xs-10 col-md-offset-4 col-md-4 form-login">
     <form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
@@ -29,11 +29,11 @@
         </div>
         </br>
         <div class="text-center form-group">
-          <button type="submit" class="btn btn-success btn-lg btn-block">Sign in</button>
+          <button type="submit" class="btn btn-success btn-lg btn-block">Login</button>
         </div>
         <div class="text-center forgot-password">
-          <a data-ui-sref="password.forgot">Forgot your password?</a> &nbsp; Or &nbsp
-           <a data-ui-sref="authentication.signup">Sign up</a>
+          <a data-ui-sref="password.forgot">Forgot your password?</a> 
+           <!-- &nbsp; Or &nbsp <a data-ui-sref="authentication.signup">Sign up</a> Bhuvan-->
         </div>
       </fieldset>
     </form>
